<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.enmasse</groupId>
  <artifactId>enmasse</artifactId>
  <packaging>pom</packaging>
  <version>0.15.2</version>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.surefire.version>2.20.1</maven.surefire.version>
    <fabric8.kubernetes-client.version>2.6.3</fabric8.kubernetes-client.version>
    <vertx.version>3.5.0</vertx.version>
    <slf4j.version>1.7.21</slf4j.version>
    <jackson.version>2.9.2</jackson.version>
    <resteasy.version>3.1.0.Final</resteasy.version>
    <mockito.version>2.0.52-beta</mockito.version>
    <junit.version>4.12</junit.version>
    <artemis.version>2.4.0</artemis.version>
    <maven.assembly.version>3.1.0</maven.assembly.version>
    <maven.shade.version>3.1.0</maven.shade.version>
    <paho.version>1.1.0</paho.version>
    <spring.version>1.5.4.RELEASE</spring.version>
    <logback.version>1.1.11</logback.version>
    <netty.version>4.1.15.Final</netty.version>
    <keycloak.version>3.3.0.Final</keycloak.version>
    <jboss.logging.version>3.3.0.Final</jboss.logging.version>
    <jboss.logging.annotations.version>2.1.0.Final</jboss.logging.annotations.version>
    <protonj.version>0.22.0</protonj.version>
    <qpidjms.version>0.26.0</qpidjms.version>
    <jacoco.version>0.7.9</jacoco.version>
    <license.maven.version>2.11</license.maven.version>
    <bouncycastle.version>1.56</bouncycastle.version>
  </properties>


  <modules>
     <module>address-model-lib</module>
     <module>k8s-api</module>
     <module>k8s-api-testutil</module>
     <module>amqp-utils</module>
     <module>configserv</module>
     <module>queue-scheduler</module>
     <module>discovery-lib</module>
     <module>topic-forwarder</module>
     <module>mqtt-gateway</module>
     <module>mqtt-lwt</module>
     <module>address-controller</module>
     <module>keycloak</module>
     <module>keycloak-controller</module>
     <module>systemtests</module>
     <module>artemis</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <configuration>
              <propertyName>surefireArgLine</propertyName>
            </configuration>
          </execution>
          <execution>
            <id>report</id>
            <phase>package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <inherited>true</inherited>
        <version>${maven.surefire.version}</version>
        <configuration>
          <environmentVariables>
            <ENV_VAR_EXISTS>value</ENV_VAR_EXISTS>
            <ENV_VAR_EXISTS_BOOLEAN>true</ENV_VAR_EXISTS_BOOLEAN>
          </environmentVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>${license.maven.version}</version>
        <configuration>
          <aggregate>true</aggregate>
          <header>header.txt</header>
          <properties>
            <owner>Red Hat, Inc.</owner>
          </properties>
          <excludes>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>coverage</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <argLine>${surefireArgLine}</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
